chore: 멀티모듈/빌드 설정 수정

--- a/remittance-api/build.gradle
+++ b/remittance-api/build.gradle
@@ -10,8 +10,16 @@ dependencies {
     implementation project(':remittance-infra')
     implementation project(':remittance-presentation')
 
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-starter-aspectj"
+    developmentOnly "org.springframework.boot:spring-boot-h2console"
+    runtimeOnly "com.h2database:h2"
     runtimeOnly "com.mysql:mysql-connector-j"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
+    testImplementation "com.fasterxml.jackson.core:jackson-databind"
 }
 
 tasks.named('test') { useJUnitPlatform() }
