--- a/remittance-application/build.gradle
+++ b/remittance-application/build.gradle
@@ -1,7 +1,18 @@
 plugins { id 'java-library' }
 
+repositories { mavenCentral() }
+
 dependencies {
-    implementation project(':remittance-domain')
+    api project(':remittance-domain')
     implementation "org.springframework:spring-context"
     implementation "org.springframework:spring-tx"
+
+    testImplementation platform("org.junit:junit-bom:5.10.2")
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+
+    testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
+    testImplementation "org.assertj:assertj-core:3.26.3"
 }
+
+tasks.named('test') { useJUnitPlatform() }
