--- a/remittance-infra/build.gradle
+++ b/remittance-infra/build.gradle
@@ -3,4 +3,10 @@ plugins { id 'java-library' }
 dependencies {
     implementation project(':remittance-domain')
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+
+    compileOnly "org.projectlombok:lombok:1.18.42"
+    annotationProcessor "org.projectlombok:lombok:1.18.42"
+
+    testCompileOnly "org.projectlombok:lombok:1.18.42"
+    testAnnotationProcessor "org.projectlombok:lombok:1.18.42"
 }
