--- a/build.gradle
+++ b/build.gradle
@@ -3,35 +3,31 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7' apply false
 }
 
-group = 'com.jangmuyeong.remittance'
-version = '0.0.1-SNAPSHOT'
-
-allprojects { repositories { mavenCentral() } }
+allprojects {
+	group = 'com.jangmuyeong.remittance'
+	version = '0.0.1-SNAPSHOT'
+}
 
 subprojects {
-	apply plugin: 'io.spring.dependency-management'
-	apply plugin: 'java'
 
-	java {
-		toolchain { languageVersion = JavaLanguageVersion.of(21) }
+	repositories {
+		mavenCentral()
 	}
 
-	configurations {
-		compileOnly { extendsFrom annotationProcessor }
+	pluginManager.withPlugin('java') {
+		tasks.withType(JavaCompile).configureEach {
+			options.compilerArgs += ["-parameters"]
+		}
+
+		dependencies {
+			implementation platform("org.springframework.boot:spring-boot-dependencies:4.0.1")
+			testImplementation platform("org.springframework.boot:spring-boot-dependencies:4.0.1")
+			testImplementation "org.springframework.boot:spring-boot-starter-test"
+
+		}
 	}
 
-	dependencyManagement {
-		imports { mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.1" }
+	tasks.withType(Test).configureEach {
+		useJUnitPlatform()
 	}
-
-	dependencies {
-		compileOnly 'org.projectlombok:lombok'
-		annotationProcessor 'org.projectlombok:lombok'
-		testCompileOnly 'org.projectlombok:lombok'
-		testAnnotationProcessor 'org.projectlombok:lombok'
-
-		testImplementation 'org.junit.jupiter:junit-jupiter'
-	}
-
-	tasks.named('test') { useJUnitPlatform() }
 }
