feat: Swagger(OpenAPI) 설정 및 API 응답 포맷 리팩토링 (RsData 적용)

--- a/remittance-presentation/build.gradle
+++ b/remittance-presentation/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation project(':remittance-application')
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0"
 }
